ci(.github): atualizando a adicionando novos workflows

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,8 @@ name: CI - Unit & E2E Tests
 
 on:
   push:
+    paths:
+        - "functions/**"
     branches:
       - "develop"
       - "feature/**"
