--- a/.github/workflows/deploy-createkeyfunc.yml
+++ b/.github/workflows/deploy-createkeyfunc.yml
@@ -5,6 +5,7 @@ on:
     branches: ["main"]
     paths:
         - "functions/createKeyFunc/**"
+        - "functions/lib/**"
 
 jobs:
   unit-test:
@@ -33,31 +34,19 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [unit-test]
-    env:
-      GOOGLE_APPLICATION_CREDENTIALS: google-application-credentials.json
     steps:
       - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
+
+      - name: 'Google auth'
+        id: 'auth'
+        uses: 'google-github-actions/auth@v1'
         with:
-          version: 8
+          credentials_json: '${{ secrets.GOOGLE_APP_CREDENTIALS_BASE64 }}'
 
-      - name: Install Node.js
-        uses: actions/setup-node@v3
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v1'
         with:
-          node-version: ${{ matrix.node }}
-          cache: "pnpm"
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Prepare Google Application Credentials
-        run: |
-          echo "${{secrets.GOOGLE_APP_CREDENTIALS_BASE64}}" | base64 --decode > "google-application-credentials.json"
+           project_id: '${{ secrets.GOOGLE_PROJECT_ID }}'
 
       - name: Deploy cloud functions
-        run: gcloud functions deploy CreateKeyFunc --project ${{secrets.GOOGLE_PROJECT_ID}} --no-allow-unauthenticated --region=southamerica-east1 --trigger-http --runtime=nodejs18 --update-labels=module=signatures --source=.
-
-      - name: Remove credentials file
-        if: success() || failure()
-        run: |
-          rm google-application-credentials.json
+        run: gcloud functions deploy UpdateKeyFunc --project ${{ secrets.GOOGLE_PROJECT_ID }} --no-allow-unauthenticated --region=southamerica-east1 --trigger-http --runtime=nodejs18 --update-labels=module=signatures --source=.
