--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: CI - Unit & E2E Tests
+name: CI - Unit Tests
 
 on:
   push:
@@ -14,6 +14,8 @@ on:
       - "dependabot/**"
       - "!main"
   pull_request:
+    paths:
+        - "functions/**"
     branches:
       - "develop"
       - "feature/**"
