ci(workflows): alterando o campo path dos workflows

--- a/.github/workflows/deploy-createkeyfunc.yml
+++ b/.github/workflows/deploy-createkeyfunc.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: ["main"]
     paths:
+        - ".github/workflows/deploy-createkeyfunc.yml"
         - "functions/createKeyFunc/**"
         - "functions/lib/**"
 
