--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,7 @@ name: CI - Unit Tests
 on:
   push:
     paths:
+        - ".github/workflows/test.yml"
         - "functions/**"
     branches:
       - "develop"
@@ -15,6 +16,7 @@ on:
       - "!main"
   pull_request:
     paths:
+        - ".github/workflows/test.yml"
         - "functions/**"
     branches:
       - "develop"
