--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,17 +37,26 @@ jobs:
         node: [ 16.x, 18.x, 20.x ]
     steps:
       - uses: actions/checkout@v3
+        id: git-clone
+        name: Cloning repository
+
       - uses: pnpm/action-setup@v2
+        id: install-pnpm
+        name: Installing PNPM
         with:
           version: 8
 
       - name: Install Node.js
         uses: actions/setup-node@v3
+        id: set-nodejs
         with:
           node-version: ${{ matrix.node }}
           cache: "pnpm"
 
       - name: Install dependencies
+        id: set-deps
         run: pnpm install --frozen-lockfile
+
       - name: Run unit tests
+        id: unit-tests
         run: pnpm run test
