--- a/.github/workflows/docker-for-dev-env.yml
+++ b/.github/workflows/docker-for-dev-env.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         id: git-clone
@@ -43,7 +43,7 @@ jobs:
           username: ${{secrets.DOCKER_HUB_USERNAME}}
           password: ${{secrets.DOCKER_HUB_TOKEN}}
 
-      - uses: docker/build-push-action@v
+      - uses: docker/build-push-action@v2
         name: Build and push image
         id: build-and-push
         if: |
