--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
+        os: [ windows-latest, macos-latest, ubuntu-latest ]
         node: [ 16.x, 18.x, 20.x ]
     steps:
       - uses: actions/checkout@v3
