--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -2,10 +2,9 @@ name: CI - Eslint
 
 on: 
   workflow_run:
-    workflows:
-      - CI - Unit Tests
-    types:
-      - completed
+    workflows: [CI - Unit Tests]
+    types: 
+      - requested
 
 jobs:
   lint:
