ci(workflows): trocar de requested para completed

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -2,9 +2,9 @@ name: CI - Eslint
 
 on: 
   workflow_run:
-    workflows: [CI - Unit Tests]
+    workflows: ["CI - Unit Tests"]
     types: 
-      - requested
+      - completed
 
 jobs:
   lint:
