--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -34,20 +34,12 @@ jobs:
       - name: Google auth
         uses: google-github-actions/auth@v1
         id: gcp-auth
-        if: |
-          steps.path-filter.outputs.createfunc == 'true' || 
-          steps.path-filter.outputs.lib == 'true' || 
-          steps.path-filter.outputs.workflow == 'true'
         with:
           credentials_json: '${{ secrets.GOOGLE_APP_CREDENTIALS_BASE64 }}'
 
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
         id: set-gcloud
-        if: |
-          steps.path-filter.outputs.createfunc == 'true' || 
-          steps.path-filter.outputs.lib == 'true' || 
-          steps.path-filter.outputs.workflow == 'true'
         with:
            project_id: '${{ secrets.GOOGLE_PROJECT_ID }}'
 
@@ -82,3 +74,24 @@ jobs:
             --runtime=${{ secrets.RUNTIME }} \
             --update-labels=module=signatures \
             --source=.
+
+      - name: Docker hub login
+        id: docker-hub-login
+        uses: docker/login-action@v1
+        with:
+          username: ${{secrets.DOCKER_HUB_USERNAME}}
+          password: ${{secrets.DOCKER_HUB_TOKEN}}
+
+      - uses: docker/build-push-action@v2
+        name: Build and push image
+        id: build-and-push
+        if: |
+          steps.path-filter.outputs.createfunc == 'true' ||
+          steps.path-filter.outputs.updatefunc == 'true' || 
+          steps.path-filter.outputs.lib == 'true' || 
+          steps.path-filter.outputs.workflow == 'true'
+        with:
+          context: .
+          push: true
+          tags: ${{secrets.DOCKER_IMAGE_TAG}} 
+
