--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: CI - Unit Tests
+name: CI - Tests & Eslint 
 
 on:
   push:
@@ -29,7 +29,7 @@ on:
       - "!main"
 
 jobs:
-  unit-test:
+  unique-job:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -60,3 +60,7 @@ jobs:
       - name: Run unit tests
         id: unit-tests
         run: pnpm run test
+
+      - name: Run Eslint
+        id: eslint
+        run: pnpm run lint
