--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "sh -c \"./tools/parallel.sh\"",
     "build": "tsc -p . --noEmit && swc ./functions --config-file ./.swcrc.json -d ./dist --delete-dir-on-start",
     "lint": "eslint \"{functions,tests}/**/*.ts\"",
-    "functions:createkeyfunc": "sh -c \"./tools/functions.sh CreateKeyFunc 8411 9231\"",
-    "functions:deletekeyfunc": "sh -c \"./tools/functions.sh DeleteKeyFunc 8412 9230\"",
-    "functions:updatekeyfunc": "sh -c \"./tools/functions.sh UpdateKeyFunc 8413 9229\"",
+    "functions:createkeyfunc": "sh -c \"./tools/functions.sh CreateKeyFunc 8411\"",
+    "functions:deletekeyfunc": "sh -c \"./tools/functions.sh DeleteKeyFunc 8412\"",
+    "functions:updatekeyfunc": "sh -c \"./tools/functions.sh UpdateKeyFunc 8413\"",
     "lint:fix": "eslint --fix",
+    "lint:fix:global": "eslint --fix \"{functions,tests}/**/*.ts\"",
     "format": "prettier --write",
     "set-hooks": "husky install",
     "pre-commit": "lint-staged --allow-empty"
