--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -77,6 +77,7 @@ jobs:
 
   dockerhub:
     runs-on: ubuntu-latest
+    needs: [gcp]
     steps:
       - uses: actions/checkout@v3
         id: git-clone
