--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -2,7 +2,7 @@ name: CD - Deploy functions
 
 on:
   push:
-    branches: ["main"]
+    branches: ["release/**"]
     paths:
         - ".github/workflows/deploy-functions.yml"
         - "functions/createKeyFunc/**"
@@ -74,46 +74,3 @@ jobs:
             --runtime=${{ secrets.RUNTIME }} \
             --update-labels=module=signatures \
             --source=.
-
-  dockerhub:
-    runs-on: ubuntu-latest
-    needs: [gcp]
-    steps:
-      - uses: actions/checkout@v3
-        id: git-clone
-        name: Cloning repository
-
-      - uses: dorny/paths-filter@v3
-        id: path-filter
-        with:
-          base: ${{ github.ref }}
-          filters: |
-            workflow:
-              - ".github/workflows/deploy-functions.yml"
-            createfunc:
-              - "functions/createKeyFunc/**"
-            updatefunc:
-              - "functions/updateKeyFunc/**"
-            lib:
-              - "functions/lib/**"
-
-      - name: Docker hub login
-        id: docker-hub-login
-        uses: docker/login-action@v1
-        with:
-          username: ${{secrets.DOCKER_HUB_USERNAME}}
-          password: ${{secrets.DOCKER_HUB_TOKEN}}
-
-      - uses: docker/build-push-action@v2
-        name: Build and push image
-        id: build-and-push
-        if: |
-          steps.path-filter.outputs.createfunc == 'true' ||
-          steps.path-filter.outputs.updatefunc == 'true' || 
-          steps.path-filter.outputs.lib == 'true' || 
-          steps.path-filter.outputs.workflow == 'true'
-        with:
-          context: .
-          push: true
-          tags: ${{secrets.DOCKER_IMAGE_TAG}} 
-
