docs: atualizando documentação

--- a/.github/workflows/deploy-docker-images.yml
+++ b/.github/workflows/deploy-docker-images.yml
@@ -11,7 +11,8 @@ on:
         - "functions/createKeyFunc/**"
         - "functions/updateKeyFunc/**"
         - "functions/lib/**"
-
+        - "package.json"
+        - "pnpm-lock.yaml"
 jobs:
   dockerhub:
     runs-on: ubuntu-latest
