--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -8,7 +8,8 @@ on:
         - "functions/createKeyFunc/**"
         - "functions/updateKeyFunc/**"
         - "functions/lib/**"
-
+        - "package.json"
+        - "pnpm-lock.yaml"
 jobs:
   gcp:
     runs-on: ubuntu-latest
