--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,8 @@ on:
     paths:
         - ".github/workflows/**"
         - "functions/**"
+        - "package.json"
+        - "pnpm-lock.yaml"
     branches:
       - '**'
       - '!main'
