--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -2,8 +2,7 @@ name: CD - Deploy functions
 
 on:
   push:
-    branches: 
-      - "release/**"
+    branches: ["release/**"]
     paths:
         - ".github/workflows/deploy-functions.yml"
         - "functions/createKeyFunc/**"
@@ -56,7 +55,7 @@ jobs:
           steps.path-filter.outputs.lib == 'true' || 
           steps.path-filter.outputs.workflow == 'true' ||
           steps.path-filter.outputs.deps == 'true' ||
-          steps.path-filter.outputs.lockfile == 'true
+          steps.path-filter.outputs.lockfile == 'true'
         run: |
           gcloud functions deploy ${{ secrets.CREATE_KEY_FNC_NAME }} \
             --project ${{ secrets.GOOGLE_PROJECT_ID }} \
@@ -74,7 +73,7 @@ jobs:
           steps.path-filter.outputs.lib == 'true' || 
           steps.path-filter.outputs.workflow == 'true' ||
           steps.path-filter.outputs.deps == 'true' ||
-          steps.path-filter.outputs.lockfile == 'true
+          steps.path-filter.outputs.lockfile == 'true'
         run: |
           gcloud functions deploy ${{ secrets.UPDATE_KEY_FNC_NAME }} \
             --project ${{ secrets.GOOGLE_PROJECT_ID }} \
