--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -23,6 +23,10 @@ jobs:
         with:
           base: ${{ github.ref }}
           filters: |
+            deps:
+              - "package.json"
+            lockfile:
+              - "pnpm-lock.yaml"
             workflow:
               - ".github/workflows/deploy-functions.yml"
             createfunc:
@@ -49,7 +53,9 @@ jobs:
         if: |
           steps.path-filter.outputs.createfunc == 'true' || 
           steps.path-filter.outputs.lib == 'true' || 
-          steps.path-filter.outputs.workflow == 'true'
+          steps.path-filter.outputs.workflow == 'true' ||
+          steps.path-filter.outputs.deps == 'true' ||
+          steps.path-filter.outputs.lockfile == 'true
         run: |
           gcloud functions deploy ${{ secrets.CREATE_KEY_FNC_NAME }} \
             --project ${{ secrets.GOOGLE_PROJECT_ID }} \
@@ -65,7 +71,9 @@ jobs:
         if: |
           steps.path-filter.outputs.updatefunc == 'true' || 
           steps.path-filter.outputs.lib == 'true' || 
-          steps.path-filter.outputs.workflow == 'true'
+          steps.path-filter.outputs.workflow == 'true' ||
+          steps.path-filter.outputs.deps == 'true' ||
+          steps.path-filter.outputs.lockfile == 'true
         run: |
           gcloud functions deploy ${{ secrets.UPDATE_KEY_FNC_NAME }} \
             --project ${{ secrets.GOOGLE_PROJECT_ID }} \
