--- a/package.json
+++ b/package.json
@@ -22,19 +22,25 @@
   "watch": {
     "functions:createkeyfnc": {
       "quiet": true,
-      "patterns": ["dist"],
+      "patterns": [
+        "dist"
+      ],
       "delay": 1500,
       "extensions": "js"
     },
     "functions:deletekeyfnc": {
       "quiet": true,
-      "patterns": ["dist"],
+      "patterns": [
+        "dist"
+      ],
       "delay": 1500,
       "extensions": "js"
     },
     "functions:updatekeyfnc": {
       "quiet": true,
-      "patterns": ["dist"],
+      "patterns": [
+        "dist"
+      ],
       "delay": 1500,
       "extensions": "js"
     }
@@ -53,27 +59,27 @@
   "dependencies": {
     "@google-cloud/functions-framework": "^3.3.0",
     "dotenv": "^16.4.5",
-    "dotenv-cli": "^7.3.0",
+    "dotenv-cli": "^7.4.1",
     "firebase-admin": "^12.0.0",
     "inversify": "^6.0.2",
-    "reflect-metadata": "^0.2.1",
-    "winston": "^3.11.0",
+    "reflect-metadata": "^0.2.2",
+    "winston": "^3.13.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^19.1.0",
-    "@swc/cli": "^0.3.9",
-    "@swc/core": "^1.4.0",
+    "@commitlint/config-conventional": "^18.6.3",
+    "@swc/cli": "^0.3.12",
+    "@swc/core": "^1.4.13",
     "@types/jest": "^29.5.12",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "commitizen": "^4.3.0",
-    "commitlint": "^19.2.2",
+    "commitlint": "^18.6.1",
     "concurrently": "^8.2.2",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "firebase-tools": "^13.7.2",
-    "husky": "^9.0.10",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "npm-watch": "^0.11.0",
@@ -81,6 +87,6 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.5"
   }
 }
