--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -2,8 +2,7 @@ name: CD - Deploy functions
 
 on:
   push:
-    branches: 
-      - "release/**"
+    branches: ["release/**"]
     paths:
         - ".github/workflows/deploy-functions.yml"
         - "functions/createKeyFunc/**"
